testing/errors/pcnegative2.a

	*=$1000
	!pseudopc -17 {	; -> "Program counter cannot be negative."
	}
